--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,6 @@
 {
   "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run build"
-    ],
+    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run build"],
     "source": "functions"
   },
   "firestore": {
@@ -18,6 +16,9 @@
     },
     "ui": {
       "enabled": true
+    },
+    "auth": {
+      "port": "9099"
     }
   }
 }
