--- a/functions/package.json
+++ b/functions/package.json
@@ -7,6 +7,7 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
+    "deploy:all": "firebase deploy --only functions,firestore",
     "logs": "firebase functions:log",
     "backup": "firebase emulators:export ./backup"
   },
