--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,8 @@
 {
   "functions": {
-    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run build"],
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ],
     "source": "functions"
   },
   "firestore": {
@@ -19,6 +21,12 @@
     },
     "auth": {
       "port": "9099"
+    },
+    "storage": {
+      "port": 9199
     }
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
